<resources>
    <string name="app_name">Lego Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For nav menu -->
    <string-array name="nav_menu">
        <item>Chains</item>
        <item>Stores</item>
        <item>Inventory</item>
    </string-array>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>


    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>

    <!-- Nav menu strings -->
    <string name="nav_chains">Chains</string>
    <string name="nav_stores">Stores</string>
    <string name="nav_inv">Inventory</string>

    <!-- Standard strings -->
    <string name="chain">Chain</string>
    <string name="chains">Chains</string>
    <string name="store">Store</string>
    <string name="stores">Stores</string>
    <string name="store_num">Store Num</string>
    <string name="display">Display</string>
    <string name="displays">Displays</string>
    <string name="inventory">Inventory</string>
    <string name="display_type">Display Type</string>
    <string name="skin">Skin</string>
    <string name="skins">Skins</string>
    <string name="date_placed">Date Placed</string>
    <string name="number_placed">Number Placed</string>
    <string name="notes">Notes</string>
    <string name="brand">Brand</string>

    <!-- Empty table strings -->
    <string name="empty_chains">No chains found</string>
    <string name="empty_stores">No stores found</string>

    <!-- Label strings -->
    <string name="label_chains">Store Chains</string>

    <!-- Add table strings -->
    <string name="add_chains_directions">Add store retail chains below. Example is "Wal-Mart" or "Target"</string>

    <!-- Add stores layout strings -->
    <string name="stores_layout_chain">Chain</string>
    <string name="stores_layout_store_number">Store Number</string>
    <string name="stores_layout_address1">Address 1</string>
    <string name="stores_layout_address2">Address 2</string>
    <string name="stores_layout_city">City</string>
    <string name="stores_layout_state">State</string>
    <string name="stores_layout_zip">Zip Code</string>

    <!-- Database Strings -->
    <!-- Lego database strings -->
    <string-array name="lego_description">
        <item>Duplo</item>
        <item>Lego</item>
        <item>Mayo Basket</item>
        <item>ICBINB Basket</item>
        <item>Butter Bunker</item>
        <item>Ice Cream Door</item>
        <item>Redwood Cooler</item>
    </string-array>
    <string-array name="lego_product_id">
        <item>0</item>
        <item>0</item>
        <item>1</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>4</item>
    </string-array>

    <!-- Skins database strings -->
    <string-array name="skin_description">
        <item>None</item>
        <item>Mayo Onion Dip</item>
        <item>Mayo Juicy Burger</item>
        <item>Mayo Holiday</item>
        <item>Mayo Organic</item>
        <item>Lipton Hot Tea</item>
        <item>Lipton Iced Tea</item>
        <item>Knorr WFD?</item>
        <item>Dove 60th</item>
        <item>Men\'s NCAA</item>
        <item>Taking Care of U</item>
    </string-array>
    <string-array name="skin_product_id">
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>3</item>
        <item>3</item>
        <item>2</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
    </string-array>
    <!--TODO Change Dove 60th to id to 13 -->
    <string-array name="skin_brand_id">
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>3</item>
        <item>3</item>
        <item>2</item>
        <item>13</item>
        <item>99</item>
        <item>99</item>
    </string-array>

    <!-- Product database strings -->
    <string-array name="product_description">
        <item>Mayo</item>
        <item>Sides</item>
        <item>Tea</item>
        <item>Butter</item>
        <item>Ice Cream</item>
        <item>Personal Care</item>
    </string-array>

    <!-- Brands database strings -->
    <string-array name="brand_description">
        <item>Hellman\'s</item>
        <item>Knorr</item>
        <item>Lipton</item>
        <item>Pure Leaf</item>
        <item>Country Crock</item>
        <item>ICBINB</item>
        <item>Imperial</item>
        <item>Brummel &amp; Brown</item>
        <item>Ben &amp; Jerry\'s</item>
        <item>Breyer\'s</item>
        <item>Popsicle</item>
        <item>Other Ice Cream</item>
        <item>Dove</item>
        <item>Axe</item>
        <item>Suave</item>
        <item>Tresemme</item>
        <item>Q-Tips</item>
        <item>Vaseline</item>
        <item>Other Personal Care</item>
    </string-array>
    <string-array name="brand_product_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>5</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
        <item>6</item>
    </string-array>
</resources>
