<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_chains"
            android:icon="@drawable/ic_link_black_24dp"
            android:title="@string/nav_chains" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_store_mall_directory_black_24dp"
            android:title="@string/nav_stores" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_account_balance_black_24dp"
             android:title="@string/nav_inv" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                 android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
