<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.apexcomputerservice.legotracker.ShowChains">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:tint="@color/white"
        android:layout_gravity="bottom|end" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Spinner
        android:id="@+id/spinnerChain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="72dp"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tvChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_chain"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerChain"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerChain" />

    <EditText
        android:id="@+id/etStoreNum"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/stores_layout_store_number"
        android:textColorHint="@color/asmGray"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="72dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tvStoreNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_store_number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etStoreNum"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etStoreNum" />

        <EditText
            android:id="@+id/etAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:ems="10"
            android:hint="@string/stores_layout_address1"
            android:textColorHint="@color/asmGray"
            app:layout_constraintLeft_toLeftOf="@+id/tvChain"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreNum"
            android:singleLine="true"/>

    <TextView
        android:id="@+id/tvAddress1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_address1"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etAddress1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etAddress1" />

        <EditText
            android:id="@+id/etAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/stores_layout_address2"
            android:textColorHint="@color/asmGray"
            app:layout_constraintLeft_toLeftOf="@+id/tvAddress1"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress1"
            android:singleLine="true"/>

    <TextView
        android:id="@+id/tvAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_address2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etAddress2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etAddress2" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/stores_layout_city"
            android:textColorHint="@color/asmGray"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress2"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tvAddress2"
            android:singleLine="true"/>

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_city"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etCity"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etCity" />

        <EditText
            android:id="@+id/etState"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/stores_layout_state"
            android:inputType="textCapWords"
            android:textColorHint="@color/asmGray"
            app:layout_constraintLeft_toLeftOf="@+id/tvCity"
            app:layout_constraintTop_toBottomOf="@+id/tvCity"
            android:singleLine="true"/>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores_layout_state"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etState"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etState" />

    <EditText
        android:id="@+id/etZip"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stores_layout_zip"
        android:textColorHint="@color/asmGray"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/etState"
        android:imeOptions="actionNext"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/tvZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/stores_layout_zip"
        android:textColorHint="@color/asmGray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etZip"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/etZip"
        />

</android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>