<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.apexcomputerservice.legotracker.AddDisplay">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_black_24dp"
        android:tint="@color/white"
        android:layout_gravity="bottom|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinnerChain"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/tvStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/stores_layout_chain"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerChain"
                app:layout_constraintTop_toBottomOf="@+id/spinnerChain" />

            <Spinner
                android:id="@+id/spinnerStore"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="72dp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/etStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_num"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerStore"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinnerStore" />

            <Spinner
                android:id="@+id/spinnerDisplay"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tvStore"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvProduct" />

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/display_type"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerDisplay"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDisplay" />

            <Spinner
                android:id="@+id/spinnerSkin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@+id/spinnerStore"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDisplayType"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/tvDisplayType" />

            <TextView
                android:id="@+id/tvSkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/skin"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerSkin"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSkin" />

            <EditText
                android:id="@+id/etDatePlaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
                app:layout_constraintLeft_toLeftOf="@+id/tvDisplay" />

            <EditText
                android:id="@+id/etNumberPlaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvDatePlaced"
                app:layout_constraintLeft_toLeftOf="@+id/tvDatePlaced" />

            <TextView
                android:id="@+id/tvNumberPlaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/number_placed"
                app:layout_constraintLeft_toLeftOf="@+id/etNumberPlaced"
                app:layout_constraintTop_toBottomOf="@+id/etNumberPlaced" />

            <TextView
                android:id="@+id/tvDatePlaced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_placed"
                app:layout_constraintLeft_toLeftOf="@+id/etDatePlaced"
                app:layout_constraintTop_toBottomOf="@+id/etDatePlaced" />

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNumberPlaced"
                app:layout_constraintLeft_toLeftOf="@+id/tvNumberPlaced" />

            <TextView
                android:id="@+id/tvNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/notes"
                app:layout_constraintLeft_toLeftOf="@+id/etNotes"
                app:layout_constraintTop_toBottomOf="@+id/etNotes" />

            <Spinner
                android:id="@+id/spinnerProduct"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvStore"
                app:layout_constraintLeft_toLeftOf="@+id/tvStore" />

            <TextView
                android:id="@+id/tvProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Product Type"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerProduct"
                app:layout_constraintTop_toBottomOf="@+id/spinnerProduct" />

            <Spinner
                android:id="@+id/spinnerBrand"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/etStore"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etStore" />

            <TextView
                android:id="@+id/tvDisplayType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/spinnerBrand"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBrand" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
